<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/default_padding"
    android:background="@color/background2"
    tools:context="com.example.android.musicappstructureabnd.Details">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"

    >
    <ImageView
    android:id="@+id/iv_details_album"
    android:layout_width="@dimen/image_size"
    android:layout_height="@dimen/image_size"
    android:layout_gravity="center_horizontal"
    android:layout_marginBottom="@dimen/default_margin"
    android:src="@drawable/jacksondangerous" />
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
              style="@style/details_left"
              android:text="@string/song_id"
                />

            <TextView
              android:id="@+id/tv_details_songId"
              style="@style/details_right"
              tools:text="1" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="match_parent" >

            <TextView
                style="@style/details_left"
                android:text="@string/song_name" />

            <TextView
                android:id="@+id/tv_details_songName"
                style="@style/details_right"
                tools:text="Black or White" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="match_parent" >

            <TextView
                style="@style/details_left"
                android:text="@string/artist_name" />

            <TextView
                android:id="@+id/tv_details_artistName"
                style="@style/details_right"
                tools:text="Michael Jackson" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="match_parent" >

            <TextView
                style="@style/details_left"
                android:text="@string/album" />

            <TextView
                android:id="@+id/tv_details_album"
                style="@style/details_right"
                tools:text="Dangerous" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="match_parent" >

            <TextView
                style="@style/details_left"
                android:text="@string/category" />

            <TextView
                android:id="@+id/tv_details_category"
                style="@style/details_right"
                tools:text="Pop" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="match_parent" >

            <TextView
                style="@style/details_left"
                android:text="@string/year" />

            <TextView
                android:id="@+id/tv_details_year"
                style="@style/details_right"
                tools:text="2014" />
        </TableRow>




    </TableLayout>
</LinearLayout>
</ScrollView>
